Fix: Align items on center

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,4 +1,5 @@
 .first-sheets {
   display: flex;
   flex-direction: row;
+  justify-content: center;
 }
